# ResNet_finetuning

./: .gitignore  CMakeLists.txt  CV_Tray_Classificator.ipynb  README.md  main.cpp
